--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # The available themes options are "default
 title                    : "Jui-Chien (Eric) Tsou"
 title_separator          : "-"
 name                     : &name "Jui-Chien (Eric) Tsou"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Undergrad @ National Taiwan University"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://pango0.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -24,13 +24,13 @@ repository               : "pango0.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Jui-Chien (Eric) Tsou"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Undergrad @ National Taiwan University"
+  location         : "Taipei, Taiwan"
+  employer         : "National Taiwan University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "tsouoeric@gmail.com" 
 
   # Academic websites
   academia         : # URL
