--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Jui-Chien (Eric) Tsou"
+title                    : "Eric's Homepage"
 title_separator          : "-"
 name                     : &name "Jui-Chien (Eric) Tsou"
 description              : &description "Undergrad @ National Taiwan University"   # Update this with a general description of your site, this is the default if not overridden by a page
